Criação das Strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,56 @@
 <resources>
     <string name="app_name">ChamaSegura</string>
-    <string name="title_activity_home_page_user">HomePageUser</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_home_page_user">Pagina Principal Utilizador</string>
+    <string name="title_home">Casa</string>
+    <string name="title_dashboard">Painel</string>
+    <string name="title_notifications">Notificações</string>
+    <string name="destrito">Selecione o Destrito</string>
+    <string name="fim_da_regra">Fim da Regra</string>
+    <string name="inicio_da_regra">Inicio da Regra</string>
+    <string name="selecione_o_motivo">Selecione o motivo</string>
+    <string name="digite_a_data_de_termino">Digite a data de termino</string>
+    <string name="digite_a_data_de_inicio">Digite a data de inicio</string>
+    <string name="salvar_regra">Salvar Regra</string>
+    <string name="criar_utilizador">Criar Utilizador</string>
+    <string name="email">E-mail</string>
+    <string name="nome">Nome</string>
+    <string name="senha">Senha</string>
+    <string name="voltar">Voltar</string>
+    <string name="save">Guardar</string>
+    <string name="regra">Regras</string>
+    <string name="esqueci_me_da_minha_palavra_passe">Esqueci-me da minha palavra-passe</string>
+    <string name="enviar">Enviar</string>
+    <string name="endere_o_de_email">Endereço de Email</string>
+    <string name="utilizadores">Utilizadores</string>
+    <string name="ola">Olá</string>
+    <string name="entrar">Entrar</string>
+    <string name="esqueceu_a_palavra_passe">Esqueceu a Palavra-Passe?</string>
+    <string name="registrar">Registrar</string>
+    <string name="nomeUser">Nome de Utilizador</string>
+    <string name="primeiroNome">Primeiro Nome</string>
+    <string name="Sobrenome">Sobrenome</string>
+    <string name="Selecione_o_seu_destrito">Selecione o seu destrito</string>
+    <string name="bem_vindo">Bem-Vindo</string>
+    <string name="a_sua_aplica_o_de_registo_das">A sua aplicação de registo das</string>
+    <string name="vossas_queimadas">vossas queimadas</string>
+    <string name="nesta_aplica_o_vais_poder">Nesta aplicação vais poder</string>
+    <string name="agendar_e_rever_as_suas">agendar e rever as suas</string>
+    <string name="queimadas_e_comunicar_com_a">queimadas e comunicar com a</string>
+    <string name="sua_c_mara_municipal">sua Câmara Municipal</string>
+    <string name="em_caso_de_incendio_ou_perda_do">Em caso de incendio ou perda do</string>
+    <string name="controlo_da_queimada_por_favor">controlo da queimada, por favor,</string>
+    <string name="contacte_as_autoridades">contacte as autoridades</string>
+    <string name="digite_as_coordenadas">Digite as coordenadas</string>
+    <string name="coordenadas">Coordenadas</string>
+    <string name="data_de_realiza_o">Data De Realização</string>
+    <string name="digite_a_data_que_pretende_realizar">Digite a data que pretende realizar</string>
+    <string name="digite_o_motivo">Digite o motivo</string>
+    <string name="motivo">Motivo</string>
+    <string name="solicitar_aprova_o">Solicitar Aprovação</string>
+    <string name="tipo">Tipo de Queimada</string>
+    <string name="Notificações">Notificações</string>
+    <string name="Pagina_Inicial">Pagina Inicial</string>
+    <string name="Perfil">Perfil</string>
+    <string name="Logout">Terminar Sessão</string>
+    <string name="Criar_Regras">Criar Regras</string>
 </resources>
