ajustes de landspace e de correção de bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="senha">Senha</string>
     <string name="voltar">Voltar</string>
     <string name="save">Guardar</string>
-    <string name="regra">Regras</string>
+    <string name="regra">Cargo</string>
     <string name="esqueci_me_da_minha_palavra_passe">Esqueci-me da minha palavra-passe</string>
     <string name="enviar">Enviar</string>
     <string name="endere_o_de_email">Endereço de Email</string>
