Alteração do icon da app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="ola">Olá</string>
     <string name="entrar">Entrar</string>
     <string name="esqueceu_a_palavra_passe">Esqueceu a Palavra-Passe?</string>
-    <string name="registrar">Registrar</string>
+    <string name="registrar">Registo</string>
     <string name="nomeUser">Nome de Utilizador</string>
     <string name="primeiroNome">Primeiro Nome</string>
     <string name="Sobrenome">Sobrenome</string>
